updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Im a full stack web development student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Im from South Plainfield, New Jersey</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Crossfit, guitar, and reading are my top 3</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Remotely working as a full stack developer while traveling the world!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in the East Falls section of Philadelphia.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like the idea of having the capability of creating something meaninful.</p>
     </section>
 
     <footer id="footer">
