--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I live in the East Falls section of Philadelphia.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I like the idea of having the capability of creating something meaninful.</p>
+      <p>I like the idea of having the capability of creating something meaningful.</p>
     </section>
 
     <footer id="footer">
